Implement 24 hour feature for mic, camera and geolocation.
Change-Id: I2dfbf24253738510804d6b4cb4629d5a6ed55123

--- a/chrome/android/java/res/values/values.xml
+++ b/chrome/android/java/res/values/values.xml
@@ -10,6 +10,7 @@
     <item type="id" name="button_primary" />
     <item type="id" name="button_secondary" />
     <item type="id" name="button_tertiary" />
+    <item type="id" name="button_24hour" />
     <item type="id" name="infobar_extra_check" />
 
     <!-- Menu Animation Constants -->
