--- a/chrome/android/java/res/layout/preference_button.xml
+++ b/chrome/android/java/res/layout/preference_button.xml
@@ -19,8 +19,9 @@
         android:id="@+id/button_preference"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:minHeight="40dp"
+        android:minHeight="32dp"
         android:textColor="#fff"
+        android:layout_gravity="end"
         chrome:buttonColor="@color/pref_accent_color" />
 
 </LinearLayout>
