--- a/chrome/android/java/res/xml/main_preferences.xml
+++ b/chrome/android/java/res/xml/main_preferences.xml
@@ -38,6 +38,10 @@
         android:key="saved_passwords"
         android:title="@string/prefs_saved_passwords" />
     <Preference
+        android:fragment="org.chromium.chrome.browser.preferences.BackgroundAudioPreference"
+        android:key="background_audio"
+        android:title="@string/background_audio_title" />
+    <Preference
         android:fragment="org.chromium.chrome.browser.preferences.HomepagePreferences"
         android:key="homepage"
         android:title="@string/options_homepage_title" />
