Add Homepage configuration
- Enabled Homepage in the UI
- Added list of homepage options
- Enabled Do-Not-Track by default

Change-Id: I6e0779cd3b3f66762e81806797edd99fac6c9f13

--- a/chrome/android/java/res/xml/main_preferences.xml
+++ b/chrome/android/java/res/xml/main_preferences.xml
@@ -42,7 +42,7 @@
         android:key="background_audio"
         android:title="@string/background_audio_title" />
     <Preference
-        android:fragment="org.chromium.chrome.browser.preferences.HomepagePreferences"
+        android:fragment="org.chromium.chrome.browser.preferences.BrowserHomepagePreferences"
         android:key="homepage"
         android:title="@string/options_homepage_title" />
 
