Custom New Tab Page
- Show search engine favicon in the title bar
- Tabbed views for bookmarks, history, recent item
- Autotheme status bar and tabbed view

Change-Id: I2e8582201e9a5124a23b71427929ac9d2ca597ad

--- a/chrome/android/java/res/values/arrays.xml
+++ b/chrome/android/java/res/values/arrays.xml
@@ -38,5 +38,10 @@
     <item>@string/website_settings_webdefender_vector_not_connect</item>
     <item>@string/website_settings_webdefender_vector_system_default</item>
   </string-array>
+  <string-array name="ntp_page_title">
+    <item>@string/most_visited</item>
+    <item>@string/ntp_bookmarks</item>
+    <item>@string/recent_tabs</item>
+  </string-array>
 
 </resources>
