Add Block Screen Observers checkbox in UI Privacy settings
User can enable this setting to block the browsing content being captured
from other applications. It is enabled by default.

Change-Id: I093df85daf8240d5eea2736149b9b92d3b79f1b1

--- a/chrome/android/java/res/xml/privacy_preferences.xml
+++ b/chrome/android/java/res/xml/privacy_preferences.xml
@@ -15,6 +15,11 @@
         android:summary="@string/search_suggestions_summary"
         android:defaultValue="true" />
     <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
+        android:key="block_screen_observers"
+        android:title="@string/block_screen_observers_title"
+        android:summary="@string/block_screen_observers_summary"
+        android:defaultValue="true" />
+    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
         android:key="safe_browsing_extended_reporting"
         android:title="@string/safe_browsing_extended_reporting_title"
         android:summary="@string/safe_browsing_extended_reporting_summary" />
