--- a/chrome/android/java/res/layout/webdefender_privacy_meter.xml
+++ b/chrome/android/java/res/layout/webdefender_privacy_meter.xml
@@ -31,6 +31,7 @@
     android:id="@+id/webdefender_privacy_meter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="24dp"
     android:paddingEnd="?android:attr/scrollbarSize"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:gravity="center_vertical"
@@ -41,46 +42,50 @@
     <ImageView
         android:id="@+id/star1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:contentDescription="@null"
         android:paddingStart="5dp" />
 
     <ImageView
         android:id="@+id/star2"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:contentDescription="@null"
-        android:paddingStart="5dp"
-        android:src="@drawable/img_deco_intrapanel"/>
+        android:paddingStart="5dp"/>
 
     <ImageView
         android:id="@+id/star3"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:contentDescription="@null"
-        android:paddingStart="5dp"
-        android:src="@drawable/img_deco_intrapanel"/>
+        android:paddingStart="5dp"/>
 
     <ImageView
         android:id="@+id/star4"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:contentDescription="@null"
-        android:paddingStart="5dp"
-        android:src="@drawable/img_deco_intrapanel"/>
+        android:paddingStart="5dp"/>
 
     <ImageView
         android:id="@+id/star5"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:contentDescription="@null"
         android:paddingStart="5dp"
-        android:src="@drawable/img_deco_intrapanel"/>
+        android:layout_gravity="bottom"/>
 
     <TextView
         android:id="@+id/count"
         android:paddingStart="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:minEms="2"
+        android:layout_gravity="bottom"/>
 
 </LinearLayout>
