Add FAB to NewTabPage
- Added a Floating Action Button
  to the NewTabPage.
- Fixed broken search in site
  settings list of sites.
- Fixed layout for NTP where a
  margin was visible at the bottom
- Fixed incomplete Captures on NTP.
- Updated apis used by SmartProtect
  Modules.

Change-Id: I0883d85e79358200760e0b6b93be817711d90172

--- a/chrome/android/java/res/layout/browser_new_tab_page.xml
+++ b/chrome/android/java/res/layout/browser_new_tab_page.xml
@@ -52,10 +52,24 @@
         android:scaleType="fitXY"
         android:src="@drawable/toolbar_shadow_normal"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/browser_ntp_views"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/browser_ntp_views"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/ntp_search"
+            android:contentDescription="@null"
+            android:layout_margin="24dp"
+            android:layout_gravity="bottom|end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search"/>
+
+    </FrameLayout>
 </LinearLayout>
 
