--- a/chrome/android/java/res/layout/bookmarks_page.xml
+++ b/chrome/android/java/res/layout/bookmarks_page.xml
@@ -34,7 +34,7 @@
             android:paddingEnd="11dp" />
     </HorizontalScrollView>
 
-    <org.chromium.chrome.browser.ntp.BookmarksListView
+    <org.chromium.chrome.browser.ntp.BrowserBookmarksRecyclerView
         android:id="@+id/bookmarks_list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
