Disable blocking screen capture by default and extend blocking screen capture to browser setting UI
Change-Id: I49be10a5cc89a7aca0b0caaa9e58ea92075cf14b

--- a/chrome/android/java/res/xml/privacy_preferences.xml
+++ b/chrome/android/java/res/xml/privacy_preferences.xml
@@ -18,7 +18,7 @@
         android:key="block_screen_observers"
         android:title="@string/block_screen_observers_title"
         android:summary="@string/block_screen_observers_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
     <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
         android:key="safe_browsing_extended_reporting"
         android:title="@string/safe_browsing_extended_reporting_title"
